# asr_demo

./: app.py  pyproject.toml  requirements.txt  segments_transcripts.csv
