[project]
name = "asr"
version = "0.1.0"
description = "Air Traffic Control Automatic Speech Recognition"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=0.20.0",
    "gradio>=4.0.0",
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "librosa>=0.10.0",
    "ml-dtypes>=0.4.0",
    "nemo-toolkit[asr]>=1.23.0",
    "numpy>=1.24.0,<2.0.0",
    "soundfile>=0.12.0",
    "torch>=2.0.0",
    "transformers>=4.35.0",
]
